--- a/app/views/interface/index.html.erb
+++ b/app/views/interface/index.html.erb
@@ -32,6 +32,7 @@
 
 
 
+<%= javascript_include_tag params[:controller]%>
 <script src= '<%= asset_path("jquery.jSlots.js")%>' ></script>
 <script src= '<%= asset_path("jquery.easing.1.3.js")%>' ></script>
 <script type="text/javascript" charset="utf-8">
